[package]
name = "todo-app-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "../../dioxus/packages/dioxus" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[features]
default = ["dioxus/desktop", "dioxus/fullstack"]
server = ["dioxus/ssr"]
